alterado env do back

--- a/backend-lolli-pet/Dockerfile
+++ b/backend-lolli-pet/Dockerfile
@@ -11,4 +11,4 @@ COPY . .
 EXPOSE 3000
 
 CMD ["npm", "start"]
-# Ou ["node", "server.js"] ou ["npm", "run", "dev"]
+# Ou ["node", "server.js"] ou ["npm", "run", "dev"] .
