--- a/backend-lolli-pet/package.json
+++ b/backend-lolli-pet/package.json
@@ -20,13 +20,14 @@
     "sucrase": "^3.35.0"
   },
   "dependencies": {
+    "mysql2": "^3.9.0",
+    "sequelize": "^6.37.7",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mariadb": "^3.4.5",
-    "multer": "^2.0.2",
-    "sequelize": "^6.37.7"
+    "multer": "^2.0.2"
   }
 }
